--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <p>Built by Phikani Ishmael Mavundla</p>
   </footer>
 
+  <script src="config.js"></script>
   <script src="script.js"></script>
+
 </body>
 </html>
