--- a/index.html
+++ b/index.html
@@ -8,34 +8,77 @@
 </head>
 <body>
   <header>
-    <h1>Weather Dashboard</h1>
-    <input type="text" id="city-input" placeholder="Enter city name..." />
-    <button id="search-btn">Search</button>
+    <h1>🌤️ Weather Dashboard</h1>
+    <div class="search-container">
+      <input type="text" id="city-input" placeholder="Enter city name..." />
+      <button id="search-btn">🔍 Search</button>
+      <button id="location-btn">📍 Use My Location</button>
+    </div>
   </header>
 
   <main>
-    <section id="current-weather">
-      <h2>Current Weather</h2>
-      <div id="weather-info">
-        <p>City: <span id="city-name">-</span></p>
-        <p>Temperature: <span id="temperature">-</span> °C</p>
-        <p>Condition: <span id="condition">-</span></p>
-        <img id="weather-icon" src="" alt="Weather Icon"/>
-      </div>
-    </section>
+    <div id="error-container"></div>
+    <div id="loading-container"></div>
+    
+    <div class="dashboard-grid">
+      <section id="current-weather" style="display: none;">
+        <h2>Current Weather</h2>
+        <div class="weather-main">
+          <div class="weather-info">
+            <p>📍 <strong id="city-name">-</strong></p>
+            <p class="temperature"><span id="temperature">-</span>°C</p>
+            <p class="condition" id="condition">-</p>
+          </div>
+          <img id="weather-icon" src="" alt="Weather Icon"/>
+        </div>
+        <div class="weather-details">
+          <div class="detail-item">
+            <div class="detail-label">Feels Like</div>
+            <div class="detail-value" id="feels-like">-</div>
+          </div>
+          <div class="detail-item">
+            <div class="detail-label">Humidity</div>
+            <div class="detail-value" id="humidity">-</div>
+          </div>
+          <div class="detail-item">
+            <div class="detail-label">Wind Speed</div>
+            <div class="detail-value" id="wind-speed">-</div>
+          </div>
+          <div class="detail-item">
+            <div class="detail-label">Pressure</div>
+            <div class="detail-value" id="pressure">-</div>
+          </div>
+          <div class="detail-item">
+            <div class="detail-label">Visibility</div>
+            <div class="detail-value" id="visibility">-</div>
+          </div>
+          <div class="detail-item">
+            <div class="detail-label">UV Index</div>
+            <div class="detail-value" id="uv-index">-</div>
+          </div>
+        </div>
+      </section>
 
-    <section id="forecast">
-      <h2>Weather Ahead</h2>
-      <div id="forecast-container"></div>
-    </section>
+      <section id="forecast" style="display: none;">
+        <h2>5-Day Forecast</h2>
+        <div id="forecast-container"></div>
+      </section>
+
+      <section id="recent-searches-section">
+        <h2>Recent Searches</h2>
+        <div id="recent-searches" class="recent-searches">
+          <p>No recent searches</p>
+        </div>
+      </section>
+    </div>
   </main>
 
   <footer>
-    <p>Built by Phikani Ishmael Mavundla</p>
+    <p>Weather data provided by OpenWeatherMap</p>
+    <p style="margin-top: 0.5rem;">Built by Phikani Ishmael Mavundla</p>
   </footer>
 
   <script src="config.js"></script>
   <script src="script.js"></script>
-
 </body>
 </html>
